<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfosActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundBlue"
            android:padding="20dp"
            android:text="@string/infoTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="10dp"
            android:padding="20dp"
            android:text="@string/infoDesc"
            android:textAlignment="center"
            android:textColor="@color/black" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/bluetoothTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/bluetooth" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/bluetoothDesc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/joystickTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/joystick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/joystickDesc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/padTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/pad" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/padDesc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/ollieCreator"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"/>

    </LinearLayout>

</ScrollView>